--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body><!--header-->
     <header><a href="#contact" class="button-contact"><i aria-label="お問い合わせ" class="fa fa-envelope-o"></i></a>
       <div class="profile">
-        <h1 class="site-title abel uppercase text-center">Web Designer <span>Taro Kirameki</span></h1><img src="./images/img_profile.jpg" alt="プロフィール写真" width="140" height="140" class="block-center profile-icon">
+        <h1 class="site-title abel uppercase text-center">Web Designer <span>Taro Kirameki</span></h1><img src="./images/kao.jpg" alt="プロフィール写真" width="140" height="140" class="block-center profile-icon">
         <p>神奈川県在住の大学生、南 力太です。大学では視覚伝達の勉強をしていました。現在WEBのコーディングの勉強をしています。</p>
       </div>
     </header><!--contents-->
@@ -36,37 +36,37 @@
       </section><!--works-->
       <section id="works">
         <h2 class="text-center">Works</h2>
-        <div class="works-box"><a href="#"><img src="./images/img_work_site.png" alt="株式会社きらめき コーポレートサイト様 Webサイトデザイン">
+        <div class="works-box"><a href="#"><img src="./images/web.jpg" alt="株式会社きらめき コーポレートサイト様 Webサイトデザイン">
             <div class="works-box-inner">
               <div class="text-center">
                 <h3>株式会社きらめき コーポレートサイト</h3><small>2016.04.20</small><span class="button-readmore">Read More</span>
               </div>
             </div></a></div>
-        <div class="works-box"><a href="#"><img src="./images/img_work_card.jpg" alt="きらめき花子様 名刺デザイン">
+        <div class="works-box"><a href="#"><img src="./images/web_r_a.jpg" alt="きらめき花子様 名刺デザイン">
             <div class="works-box-inner">
               <div class="text-center">
                 <h3>きらめき花子様 名刺</h3><small>2016.04.20</small><span class="button-readmore">Read More</span>
               </div>
             </div></a></div>
-        <div class="works-box"><a href="#"><img src="./images/img_work_blog.jpg" alt="WordPressオリジナルテーマ">
+        <div class="works-box"><a href="#"><img src="./images/web_r.jpg" alt="WordPressオリジナルテーマ">
             <div class="works-box-inner">
               <div class="text-center">
                 <h3>ブログデザイン</h3><small>2016.04.20</small><span class="button-readmore">Read More</span>
               </div>
             </div></a></div>
-        <div class="works-box"><a href="#"><img src="./images/img_work_card.jpg" alt="きらめき花子様 名刺デザイン">
+        <div class="works-box"><a href="#"><img src="./images/web_r_a.jpg" alt="きらめき花子様 名刺デザイン">
             <div class="works-box-inner">
               <div class="text-center">
                 <h3>きらめき花子様 名刺</h3><small>2016.04.20</small><span class="button-readmore">Read More</span>
               </div>
             </div></a></div>
-        <div class="works-box"><a href="#"><img src="./images/img_work_blog.jpg" alt="WordPressオリジナルテーマ">
+        <div class="works-box"><a href="#"><img src="./images/web_r.jpg" alt="WordPressオリジナルテーマ">
             <div class="works-box-inner">
               <div class="text-center">
                 <h3>ブログデザイン</h3><small>2016.04.20</small><span class="button-readmore">Read More</span>
               </div>
             </div></a></div>
-        <div class="works-box"><a href="#"><img src="./images/img_work_site.png" alt="株式会社きらめき コーポレートサイト様 Webサイトデザイン">
+        <div class="works-box"><a href="#"><img src="./images/web.jpg" alt="株式会社きらめき コーポレートサイト様 Webサイトデザイン">
             <div class="works-box-inner">
               <div class="text-center">
                 <h3>株式会社きらめき コーポレートサイト</h3><small>2016.04.20</small><span class="button-readmore">Read More</span>
